--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@mui/lab": "^5.0.0-alpha.134",
     "@mui/material": "^5.13.4",
     "@reduxjs/toolkit": "^1.8.6",
+    "@rollup/plugin-inject": "^5.0.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "buffer": "^6.0.3",
     "date-fns": "^2.30.0",
     "dotenv": "^16.0.3",
     "formik": "^2.2.9",
@@ -30,12 +32,15 @@
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-icons": "^4.11.0",
+    "react-material-ui-carousel": "^3.4.2",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.12.1",
     "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.6.2",
+    "styled-components": "^6.1.0",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
