--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource-variable/inter": "^5.0.5",
     "@mui/icons-material": "^5.11.16",
+    "@mui/joy": "^5.0.0-beta.14",
     "@mui/lab": "^5.0.0-alpha.134",
     "@mui/material": "^5.13.4",
+    "@react-oauth/google": "^0.11.1",
     "@reduxjs/toolkit": "^1.8.6",
     "@rollup/plugin-inject": "^5.0.3",
     "@testing-library/jest-dom": "^5.16.5",
